added card for pokemon

--- a/src/app/common/card/card.component.scss
+++ b/src/app/common/card/card.component.scss
@@ -1,5 +1,21 @@
-.card-block{
-  width: 40px;
-  height: 40px;
-  border: 1px solid black;
+@import "src/scss/variables";
+
+.card{
+  display: flex;
+  justify-content: space-between;
+  padding-left: 20px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+
+
+  &__pokemon-name{
+    font-size: 22px;
+    font-weight: 600;
+  }
+  &__img{
+    width: 200px;
+    cursor: pointer;
+    img{
+      width: 100%;
+    }
+  }
 }
