--- a/src/app/common/card/card.component.html
+++ b/src/app/common/card/card.component.html
@@ -1,3 +1,6 @@
-<div class="card-block">
-
+<div class="card">
+  <p  class="card__pokemon-name">{{pokemon.name.toUpperCase()}}</p>
+  <div class="card__img">
+    <img  src="{{pokemon.sprites.front_default}}" alt="">
+  </div>
 </div>
